# wiki-extract

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-compose_linux.yml  download.ps1  download.sh  ollama_extract_characters.py  pyproject.toml  setup.ps1  setup.sh
docs/: DETAIL_en.md  DETAIL_ja.md  GITHUB_PUSH.md
scripts/: list_pages_not_in_candidates.py  title_to_page_id.py
tests/: conftest.py  test_characters_ai_filter.py  test_characters_ai_split.py  test_characters_extract_candidates.py  test_extract_data_dir.py  test_extract_section_parser.py  test_extract_sql_categorylinks.py  test_extract_sql_page.py  test_llm_batch_runner.py  test_llm_client.py  test_llm_parser_common.py  test_main.py  test_options_env_combinations.py  test_util_config.py  test_util_csv_util.py  test_util_log.py  test_util_path_util.py
wiki_extract/: __init__.py  __main__.py  character_filter.py  config.py  data_dir.py  log.py  section_parser.py  sql_categorylinks.py  sql_page.py  xml_stream.py  xml_workers.py
wiki_extract/characters/: __init__.py  ai_characters_filter.py  ai_characters_split.py  extract_character_candidates.py
wiki_extract/data/: excluded_names.json
wiki_extract/data/prompts/: filter_system.txt  split_example_input.txt  (+2 more)
wiki_extract/extract/: __init__.py  data_dir.py  extract_pages.py  section_parser.py  sql_categorylinks.py  sql_page.py  xml_workers.py
wiki_extract/llm/: __init__.py  batch_runner.py  client.py  parser_common.py
wiki_extract/util/: __init__.py  config.py  csv_util.py  path_util.py
