[project]
name = "wiki-extract"
version = "0.1.0"
description = "Extract fictional character names from Japanese Wikipedia dumps"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
dependencies = [
    "mwsql>=0.1",
    "mwparserfromhell>=0.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/YOUR_USERNAME/wiki-extract"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
